--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,14 @@ dependencies:
 
   fl_chart: ^0.71.0
 
+  speech_to_text: ^7.0.0
+
+  lottie: ^3.1.0
+
+  flutter_tts: ^4.2.3
+
+  
+
 
 dev_dependencies:
   flutter_test:
